# QtDemo

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
QTFirst/: main.cpp  main_qml.cpp
QTFirst/Headers/: CallOut.h  ChartView.h  CsvDataProvider.h  DrawLayer.h  QtApp.h
QTFirst/Imp/: CallOut.cpp  ChartView.cpp  CsvDataProvider.cpp  DrawLayer.cpp  QtApp.cpp  QtApp.ui
QTFirst/qml/: main.qml
